<resources>
    <string name="app_name">Act3AndroidStudio</string>
    <string name="GoToAct1button">Act1</string>
    <string name="GoToAct2Button">Act2</string>
    <string name="GoToAct3Button">Act3</string>
    <string name="GoToAct4Button">Act4</string>
    <string name="button10Act1">Button</string>
    <string name="button13Act1">Button</string>
    <string name="button12Act1">Button</string>
    <string name="button16Act1">Button</string>
    <string name="button14Act1">Button</string>
    <string name="button15Act1">Button</string>
    <string name="button11Act1">Button</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="button4Act2">Button</string>
    <string name="button2Act2">Button</string>
    <string name="buttonAct2">Button</string>
    <string name="button3Act2">Button</string>
    <string name="button5Act2">Button</string>
    <string name="button6Act2">Button</string>
    <string name="BackButtonAct2">Back</string>
    <string name="Nextbutton">Next</string>
    <string name="buton8Act2_2">Button</string>
    <string name="ButtonGrid1">Button</string>
    <string name="ButtonGrid3">Button</string>
    <string name="ButtonGrid4">Button</string>
    <string name="ButtonGrid5">Button</string>
    <string name="ButtonGrid6">Button</string>
    <string name="ButtonGrid2">Button</string>
    <string name="button4act2_3">Button</string>
    <string name="button5act2_3">Button</string>
    <string name="button2act2_3">Button</string>
    <string name="button6act2_3">Button</string>
    <string name="button7act2_3">Button</string>
    <string name="button1act2_3">Button</string>
    <string name="equalButton">=</string>
    <string name="plusButton">+</string>
    <string name="Threebutton">3</string>
    <string name="TwoButton">2</string>
    <string name="EigthButton">8</string>
    <string name="MultiButton">*</string>
    <string name="OneButton">1</string>
    <string name="SevenButton">7</string>
    <string name="FourButton">4</string>
    <string name="FiveButton">5</string>
    <string name="SixButton">6</string>
    <string name="NineButton">9</string>
    <string name="DivButton">/</string>
    <string name="RestarButton">-</string>
    <string name="deleteOneButton"><![CDATA[<-]]></string>
    <string name="DeleteAllButton">C</string>
    <string name="CeroButton">0</string>
</resources>