<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="345dp"
        android:layout_height="193dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="250dp"
        android:padding="16dp"
        app:alignmentMode="alignMargins"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3"
        app:useDefaultMargins="true">

        <!-- Fila 1 -->
        <Button
            android:id="@+id/buttonGrid"
            android:layout_width="wrap_content"
            android:text="@string/ButtonGrid1"
            app:layout_column="0"
            app:layout_row="0"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <Button
            android:id="@+id/buttonGrid2"
            android:layout_width="wrap_content"
            android:text="@string/ButtonGrid2"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/buttonGrid3"
            android:layout_width="wrap_content"
            android:text="@string/ButtonGrid3"
            app:layout_column="2"
            app:layout_row="0" />


        <!-- Fila 2 -->
        <Button
            android:id="@+id/buttonGrid4"
            android:layout_width="254dp"
            android:layout_height="0dp"
            android:text="@string/ButtonGrid4"
            app:layout_columnSpan="3"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1"
            tools:ignore="TouchTargetSizeCheck" />

        <!-- Fila 3 -->

        <Button
            android:id="@+id/buttonGrid5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/ButtonGrid4"
            app:layout_columnSpan="2"
            app:layout_columnWeight="1"
            app:layout_row="2"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/buttonGrid6"
            android:layout_width="wrap_content"
            android:text="@string/ButtonGrid6"
            app:layout_columnSpan="1"
            app:layout_row="2"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/backButtonAct2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BackButtonAct2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <Button
        android:id="@+id/nextButtonAct2_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Nextbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206" />
</androidx.constraintlayout.widget.ConstraintLayout>